[project]
name = "chat-with-documents"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.45.4",
    "chromadb>=0.6.3",
    "langchain>=0.3.21",
    "sentence-transformers>=4.0.1",
    "vllm>=0.8.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "taskipy>=1.14.1",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.taskipy.tasks]
fmt = "ruff format"
lint = "ruff check --fix"
