[project]
name = "chat-with-documents"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.45.4",
    "chromadb>=0.6.3",
    "langchain>=0.3.21",
    "sentence-transformers>=4.0.1",
    "vllm>=0.8.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "taskipy>=1.14.1",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle (Error)
    "W", # pycodestyle (Warning)
    "F", # Pyflakes
    "UP", # pyupgrade
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "PTH", # flake8-use-pathlib
    "N", # pep8-naming
    "PGH", # pygrep-hooks
    "NPY", # NumPy-specific rules
    "RUF", # Ruff-specific rules
    "I", # isort
]

[tool.taskipy.tasks]
fmt = "ruff format"
lint = "ruff check --fix"
